--- a/src/GUI/ModManager/Styling/DefaultStyles.axaml
+++ b/src/GUI/ModManager/Styling/DefaultStyles.axaml
@@ -3,6 +3,7 @@
     xmlns:controls="using:ModManager.Controls"
     xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
     xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
+    xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
     xmlns:rxui="using:Avalonia.ReactiveUI"
     xmlns:suki="using:SukiUI">
 
@@ -96,5 +97,20 @@
 
 	<Style Selector="Window">
 		<Setter Property="TextElement.Foreground" Value="{DynamicResource SukiText}" />
+	</Style>
+
+	<!--  This fixes an issue where setting the Foreground of a MaterialIcon directly makes it not change color on hover.  -->
+	<Style Selector="Button">
+		<Style Selector="^:pointerover > materialIcons|MaterialIcon">
+			<Setter Property="Foreground" Value="{DynamicResource SukiPrimaryColor}" />
+		</Style>
+		<Style Selector="^ > materialIcons|MaterialIcon">
+			<Setter Property="Foreground" Value="{ReflectionBinding Foreground, RelativeSource={RelativeSource AncestorType=Button}, FallbackValue=White}" />
+			<Setter Property="Transitions">
+				<Transitions>
+					<BrushTransition Property="Foreground" Duration="0:0:0.2" />
+				</Transitions>
+			</Setter>
+		</Style>
 	</Style>
 </Styles>
